# Bender

./: CMakeLists.txt  CTestConfig.cmake  README
Applications/: CMakeLists.txt
Applications/BenderApp/: CMakeLists.txt  Main.cxx  qSlicerAppAboutDialog.cxx  qSlicerAppAboutDialog.h  qSlicerAppMainWindow.cxx  qSlicerAppMainWindow.h  qSlicerAppMainWindowCore.cxx  qSlicerAppMainWindowCore.h  qSlicerAppMainWindowCore_p.h
Applications/BenderApp/Resources/: Bender.icns  BenderApp.qrc
CMake/: BenderCheckExternalProjectDependency.cmake  BenderConfig.cmake.in  BenderEmptyExternalProject.cmake  BenderExport.h.in  BenderExportLibrary.cmake  BenderExtractRepositoryInfo.cmake  BenderMacroSimpleTest.cmake  BenderOSXVariables.cmake  DashboardDriver.cmake  DashboardTemplate.cmake  FindSOFA.cmake  SofaWindowsPatch.cmake  TEMPLATE.BenderDashboardScript.cmake  UseBender.cmake  benderMacroCheckExternalProjectDependency.cmake  benderMacroEmptyExternalProject.cmake  benderMacroExtractRepositoryInfo.cmake  benderVersionConfigure.h.in
CMake/Superbuild/: CMakeLists.txt  External_Bender.cmake  External_BenderLibs.cmake  External_Cleaver.cmake  External_Eigen.cmake  External_Eigen3.cmake  External_SOFA.cmake  External_Slicer.cmake  External_Sofa.cmake
Libs/: CMakeLists.txt
Libs/Cleaver/: CMakeLists.txt  LabelMapField.cxx  LabelMapField.h  LabelMapField.txx
Libs/Cleaver/Testing/: CMakeLists.txt  TestLabelMapField.cxx
Libs/Common/: CMakeLists.txt  WeightMap.cxx  WeightMap.h  WeightMapIO.cxx  WeightMapIO.h  WeightMapMath.h  WeightMapUtils.h  benderIOUtils.cxx  benderIOUtils.h  benderIOUtils.txx  benderWeightMap.cxx  benderWeightMap.h  benderWeightMap.txx  benderWeightMapIO.cxx  benderWeightMapIO.h  benderWeightMapIO.txx  benderWeightMapMath.h
Libs/EigenWrapper/: CMakeLists.txt  EigenSparseSolve.cxx  EigenSparseSolve.h
Libs/ITK/: CMakeLists.txt  itkVotingResampleImageFunction.h  itkVotingResampleImageFunction.txx
Libs/VTK/: CMakeLists.txt
Libs/VTK/Widgets/: CMakeLists.txt  vtkArmatureRepresentation.cxx  vtkArmatureRepresentation.h  vtkArmatureWidget.cxx  vtkArmatureWidget.h  vtkBoneEnvelopeRepresentation.cxx  vtkBoneEnvelopeRepresentation.h  vtkBoneRepresentation.cxx  vtkBoneRepresentation.h  vtkBoneWidget.cxx  vtkBoneWidget.h  vtkCylinderBoneRepresentation.cxx  vtkCylinderBoneRepresentation.h  vtkDoubleConeBoneRepresentation.cxx  vtkDoubleConeBoneRepresentation.h
Libs/VTK/Widgets/Testing/: CMakeLists.txt  vtkArmatureWidgetArmTest.cxx  vtkArmatureWidgetTest.cxx  vtkArmatureWidgetTestRotations.cxx  vtkBenderWidgetTestHelper.h  vtkBoneWidgetRepresentationAndInteractionTest.cxx  vtkBoneWidgetTest_Basics.cxx  vtkBoneWidgetTest_PoseMode.cxx  vtkBoneWidgetTest_RestMode.cxx  vtkBoneWidgetThreeBonesTest.cxx  vtkBoneWidgetTwoBonesTest.cxx  vtkBoneWidgetTwoBonesTestRotationMatrix.cxx
Modules/: CMakeLists.txt
Modules/CLI/: CMakeLists.txt
Modules/CLI/ArmatureWeight/: Armature.cxx  Armature.h  ArmatureEdge.cxx  ArmatureEdge.h  ArmatureWeight.cxx  ArmatureWeight.xml  ArmatureWeightThreader.cxx  ArmatureWeightThreader.h  ArmatureWeightWriter.cxx  ArmatureWeightWriter.h  CMakeLists.txt  HeatDiffusionProblem.h  SolveHeatDiffusionProblem.h  itkThresholdMedianImageFunction.txx
Modules/CLI/ArmatureWeight/Data/Input/: armature.vtk
Modules/CLI/ArmatureWeight/Testing/: CMakeLists.txt  TestSimpleHeatDiffusion.cxx
Modules/CLI/ChangeLabel/Testing/: CMakeLists.txt
Modules/CLI/EvalWeight/: CMakeLists.txt  EvalWeight.cxx  EvalWeight.xml
Modules/CLI/PoseBody/: CMakeLists.txt  PoseBody.cxx  PoseBody.xml  dqconv.c
Modules/Loadable/: CMakeLists.txt
Modules/Loadable/Armatures/: CMakeLists.txt  qSlicerArmaturesIO.cxx  qSlicerArmaturesIO.h  qSlicerArmaturesIOOptionsWidget.cxx  qSlicerArmaturesIOOptionsWidget.h  qSlicerArmaturesModule.cxx  qSlicerArmaturesModule.h  qSlicerArmaturesModuleWidget.cxx  qSlicerArmaturesModuleWidget.h  qSlicerArmaturesModuleWidget_p.h
Modules/Loadable/Armatures/Logic/: CMakeLists.txt  vtkSlicerArmaturesLogic.cxx  vtkSlicerArmaturesLogic.h
Modules/Loadable/Armatures/MRML/: CMakeLists.txt
Modules/Loadable/Armatures/MRML/Core/: CMakeLists.txt  vtkMRMLArmatureNode.cxx  vtkMRMLArmatureNode.h  vtkMRMLArmatureNodeHelper.cxx  vtkMRMLArmatureNodeHelper.h  vtkMRMLArmatureStorageNode.cxx  vtkMRMLArmatureStorageNode.h  vtkMRMLBoneDisplayNode.cxx  vtkMRMLBoneDisplayNode.h  vtkMRMLBoneNode.cxx  vtkMRMLBoneNode.h  vtkMRMLNodeHelper.cxx  vtkMRMLNodeHelper.h
Modules/Loadable/Armatures/MRML/DisplayableManagers/: CMakeLists.txt  vtkMRMLArmatureDisplayableManager.cxx  vtkMRMLArmatureDisplayableManager.h
Modules/Loadable/Armatures/Resources/: qSlicerArmaturesModule.qrc
Modules/Loadable/Armatures/Resources/Armatures/: Adult-armature.vtk  Arm-armature.vtk  BVHCompatibleArmature.arm  Child-armature.vtk  StickMan-armature.vtk
Modules/Loadable/Armatures/Resources/UI/: qSlicerArmaturesIOOptionsWidget.ui  qSlicerArmaturesModule.ui
Modules/Loadable/Armatures/Testing/: CMakeLists.txt
Modules/Loadable/Armatures/Testing/Cxx/: CMakeLists.txt  vtkSlicerArmaturesLogicTest.cxx
Modules/Loadable/Armatures/Testing/TestData/: HumanArmature.arm  Snake.blend  SnakeArmature.arm  SnakeLoopOutOffset.arm
Modules/Loadable/Armatures/Widgets/: CMakeLists.txt  qMRMLArmaturesAnimationWidget.cxx  qMRMLArmaturesAnimationWidget.h
Modules/Loadable/Armatures/Widgets/DesignerPlugins/: CMakeLists.txt  qMRMLArmaturesAnimationWidgetPlugin.cxx  qMRMLArmaturesAnimationWidgetPlugin.h  qSlicerArmaturesModuleWidgetsAbstractPlugin.cxx  qSlicerArmaturesModuleWidgetsAbstractPlugin.h  qSlicerArmaturesModuleWidgetsPlugin.cxx  qSlicerArmaturesModuleWidgetsPlugin.h
Modules/Loadable/Armatures/Widgets/Resources/UI/: qMRMLArmaturesAnimationWidget.ui
Modules/Scripted/: CMakeLists.txt
Modules/Scripted/Scripts/: BenderLabelStatistics.py  BenderSampleData.py  CMakeLists.txt  SkinModelMaker.py  Workflow.py
Modules/Scripted/Scripts/Resources/UI/: BenderLabelStatistics.ui  BenderSampleData.ui  SkinModelMaker.ui  Workflow.ui
Utilities/Blender/: io_export_armature.py
Utilities/Logos/: AFRL.h
Utilities/Qt/: Bender.qrc
(+109 files in other folders)
